Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.1
  FEATURES:
    * Podcasts can now be grouped in the playlist and show useful info in the
      tag editor.
    * Playlist files can be droped on the "Saved Playlist" category to
      import them into Amarok.
    * Playlist files from the default playlist location are now loaded by
      default. (BR 209596)
    * Added view menu to menu bar for ease of use.
    * Saved playlists and folders can now be deleted with the keyboard.
    * Added "Copy on Write" when trying to edit a read only (one of the 
      default) playlist layouts. The changed layout is now simply saved under 
      a new name. 
    * Added bookmarks to the context view, allowing saving and restoring of 
      applet setups.
    * Enhanced --debug feature: When a function takes very long to run (> 5s),
      we print a special message (GREPME) that can be searched easily.
    * Middle-clicking an item in the Collection Browser appends it to the
      playlist. Patch by Felix Geyer <debfx-kde@fobos.de>. (BR 197423)
    * Added feature for removing duplicates from the playlist. Patch by John
      Atkinson <john@fauxnetic.co.uk>. (BR 200445)
    * Allow changing of playlist layout item sizes using the inline editor.
    * Initial KNotify support.
    * Show total playlist file size in a tooltip when hovering over the total
      play list time. (BR 91640)
    * Implemented Jump To. Press Ctrl+J to focus the playlist search.
      (BR 92400)
    * Made Love/Skip/Ban/Enqueue/Dequeue available in Shortcuts configuration
      dialog. (BR 136232, BR 187542)

  CHANGES:
    * Multiple usability improvements for the Dynamic Playlist UI.
    * Moved the Podcast category to the top level of the Content panel.
    * Renamed "Browsers" panel to better suited "Media Sources".
    * Improvements to the row heights in the playlist, making especially the
      size of the rating stars more consistent.