@@ -60,6 +60,7 @@ PlaylistBrowserNS::PodcastModel::PodcastModel()
  : QAbstractItemModel()
  , m_appendAction( 0 )
  , m_loadAction( 0 )
+ , m_setNewAction( 0 )
 {
     s_instance = this;
     QList<Meta::PlaylistPtr> playlists =
@@ -689,7 +690,10 @@ PlaylistBrowserNS::PodcastModel::actionsFor( const QModelIndexList &indices )
     if( !m_selectedChannels.isEmpty() )
         actions << provider->channelActions( m_selectedChannels );
     else if( !m_selectedEpisodes.isEmpty() )
+    {
+        actions << createEpisodeActions( m_selectedEpisodes );
         actions << provider->episodeActions( m_selectedEpisodes );
+    }
 
     return actions;
 }
@@ -727,6 +731,42 @@ PlaylistBrowserNS::PodcastModel::createCommonActions( QModelIndexList indices )
     actions << m_loadAction;
 
     return actions;
+}
+
+QList< QAction * >
+PlaylistBrowserNS::PodcastModel::createEpisodeActions( Meta::PodcastEpisodeList episodes )
+{
+    if( m_setNewAction == 0 )
+    {
+        m_setNewAction = new QAction( KIcon( "rating" ),
+                        i18nc( "toggle the \"new\" status of this podcast episode",
+                               "&New" ),
+                                     this
+                                    );
+        m_setNewAction->setProperty( "popupdropper_svg_id", "new" );
+        m_setNewAction->setCheckable( true );
+        connect( m_setNewAction, SIGNAL( triggered( bool ) ), SLOT( slotSetNew( bool ) ) );
+    }
+
+    /* by default a list of podcast episodes can only be changed to isNew = false, except
+       when all selected episodes are the same state */
+    m_setNewAction->setChecked( false );
+    foreach( const Meta::PodcastEpisodePtr episode, episodes )
+    {
+        if( episode->isNew() )
+            m_setNewAction->setChecked( true );
+    }
+
+    return QList< QAction *>() << m_setNewAction;
+}
+
+void
+PlaylistBrowserNS::PodcastModel::slotSetNew( bool newState )
+{
+    foreach( Meta::PodcastEpisodePtr episode, m_selectedEpisodes )
+    {
+        episode->setNew( newState );
+    }
 }
 
 Meta::PodcastChannelList
