@@ -5,6 +5,7 @@ Amarok ChangeLog
 
 VERSION 2.2.1
   FEATURES:
+    * Podcast episodes can now be marked as new/old manually.
     * Podcasts can now be grouped in the playlist and show useful info in the
       tag editor.
     * Playlist files can be droped on the "Saved Playlist" category to
